<resources>
    <string name="app_name">ParkDublin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Info</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_booking">BookingActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="live_feed_popup">The live feed is updated every \n 5 mins</string>
...
    <string name="eur_in_amount">EUR in amount</string>
    <string name="name_of_the_park">name of the park</string>
    <string name="name_got_from_the_parser">name got from the parser</string>
    <string name="number_of_spaces">number of spaces</string>
    <string name="arnotts">arnotts</string>
    <string name="user_password">password</string>
    <string name="sign_up">Sign Up</string>
    <string name="collecting_license_plate">Your vehicle license plate number will be collected</string>
    <string name="collecting_user_card_information">Our vendor paypal collects your credit card information</string>
    <string name="if_you_reserve_parking">IF YOU RESERVE A PARKING</string>
    <string name="gps_location">GPS Location</string>
    <string name="collect_password">Password</string>
    <string name="collect_username">Username</string>
...
