...
        <item
            android:id="@+id/nav_registration"
            android:icon="@drawable/registration"
            android:title="@string/register" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile" />


    </group>

...
